--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.pr_idi.mydatabaseexample.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/main_view_pager"
+        android:name="com.example.pr_idi.mydatabaseexample.BooksSortedByCategoryFragment"
         />
 
 </RelativeLayout>
