--- a/app/src/main/res/layout/books_sorted_by_category_layout.xml
+++ b/app/src/main/res/layout/books_sorted_by_category_layout.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="TextView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/book_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
