Bloc A  1 Finished. Recycler View of books sorted by category

--- a/app/src/main/res/layout/book_item_layout_v2.xml
+++ b/app/src/main/res/layout/book_item_layout_v2.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
         card_view:cardCornerRadius="2dp"
@@ -16,13 +16,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/book_image"
-                android:layout_width="100dp"
-                android:id="@+id/book_image"
-                android:layout_height="100dp" />
 
             <TextView
                 android:text="Author"
@@ -117,6 +110,14 @@
                 android:id="@+id/textView2"
                 android:layout_below="@+id/book_image"
                 android:layout_centerHorizontal="true" />
+
+            <ImageView
+                android:src="@drawable/book_image"
+                android:layout_width="100dp"
+                android:id="@+id/book_image"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/textView" />
 
 
         </RelativeLayout>
