Created first part of Add New Book Procedure. Also done a good structure for adding this functionality to other fragments.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.pr_idi.mydatabaseexample.MainActivity">
 
-    <fragment
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.pr_idi.mydatabaseexample.BooksSortedByCategoryFragment"
-        />
+        android:id="@+id/content_frame"/>
 
 </RelativeLayout>
