--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -3,34 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/title_sorting"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Llibres per títol" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/category_sorting"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Llibres per categoria" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/help_menu"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Help" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/about_menu"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="About" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
