--- a/app/src/main/res/layout/book_item_layout_v2.xml
+++ b/app/src/main/res/layout/book_item_layout_v2.xml
@@ -15,7 +15,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
             <TextView
                 android:text="Author"
@@ -23,70 +24,10 @@
                 android:layout_below="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:layout_alignStart="@+id/textView2" />
 
             <TextView
-                android:text="Year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView6"
-                android:id="@+id/textView3"
-                android:layout_alignStart="@+id/textView6" />
-
-            <TextView
-                android:text="Publisher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView3"
-                android:id="@+id/textView4"
-                android:layout_alignStart="@+id/textView3" />
-
-            <TextView
-                android:text="Category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView4"
-                android:id="@+id/textView5"
-                android:layout_alignStart="@+id/textView4" />
-
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/textView5"
-                android:layout_width="wrap_content"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_marginLeft="15dp"
-                android:text="Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/book_image"
-                android:id="@+id/textView"
-                android:textStyle="normal|bold" />
-
-            <TextView
-                android:layout_marginLeft="15dp"
-                android:text="Year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView7"
-                android:id="@+id/textView8"
-                android:textStyle="normal|bold" />
-
-            <TextView
-                android:layout_marginLeft="15dp"
-                android:text="Publisher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView8"
-                android:id="@+id/textView9"
-                android:textStyle="normal|bold" />
-
-            <TextView
-                android:layout_marginLeft="15dp"
                 android:text="Category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,30 +35,76 @@
                 android:id="@+id/textView10"
                 android:textStyle="normal|bold" />
 
+            <ImageView
+                android:src="@drawable/book_image"
+                android:layout_width="50dp"
+                android:id="@+id/book_image"
+                android:layout_height="50dp"
+                android:layout_marginRight="30dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/textView" />
+
             <TextView
-                android:layout_marginLeft="15dp"
-                android:text="Author"
+                android:text="Category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView7"
-                android:layout_below="@+id/textView"
-                android:textStyle="normal|bold" />
+                android:id="@+id/textView5"
+                android:layout_below="@+id/textView9"
+                android:layout_alignStart="@+id/textView4" />
+
+            <TextView
+                android:text="Publisher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                android:layout_above="@+id/textView5"
+                android:layout_alignStart="@+id/textView3" />
+
+            <TextView
+                android:text="Year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3"
+                android:layout_above="@+id/textView4"
+                android:layout_toEndOf="@+id/book_image" />
+
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:layout_height="wrap_content"
+                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
+                android:layout_below="@+id/textView5"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="14dp" />
+
+            <TextView
+                android:text="Year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView8"
+                android:textStyle="normal|bold"
+                android:layout_below="@+id/textView6"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:text="Publisher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView9"
+                android:textStyle="normal|bold"
+                android:layout_below="@+id/textView8"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:text="Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
-                android:layout_below="@+id/book_image"
-                android:layout_centerHorizontal="true" />
-
-            <ImageView
-                android:src="@drawable/book_image"
-                android:layout_width="100dp"
-                android:id="@+id/book_image"
-                android:layout_height="100dp"
+                android:textSize="24sp"
                 android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/textView" />
+                android:layout_toEndOf="@+id/book_image" />
 
 
         </RelativeLayout>
