Eliminar llibre funcional. Ha quedat super bé la veritat. Fins hi tot animacións al recycler view quan s'elimina un llibre u/o es desfà l'acció. S'ha trobat un problema en diversos fragments. Quan es rota la pantalla es perd la referència d'unes cuantes variables i aleshores peta al fer alguna acció.

--- a/app/src/main/res/layout/item_title_list.xml
+++ b/app/src/main/res/layout/item_title_list.xml
@@ -25,4 +25,4 @@
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
     android:paddingRight="?android:attr/listPreferredItemPaddingRight"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:text="Penis" />
+    android:text="Text" />
