Provant una cosa

--- a/app/src/main/res/layout/delete_book_layout.xml
+++ b/app/src/main/res/layout/delete_book_layout.xml
@@ -23,7 +23,7 @@
         android:textSize="12sp" />
 
     <Button
-        android:text="Eliminar"
+        android:text="Cercar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button" />
