Solved crashed when rotating screen.

--- a/app/src/main/res/layout/new_book_dialog_layout.xml
+++ b/app/src/main/res/layout/new_book_dialog_layout.xml
@@ -55,6 +55,7 @@
             android:ems="10"
             android:id="@+id/editTextYear"
             android:inputType="number"
+            android:maxLength="4"
             android:textSize="12sp" />
 
         <TextView
