--- a/app/src/main/res/layout/fragment_find_books_by_author.xml
+++ b/app/src/main/res/layout/fragment_find_books_by_author.xml
@@ -1,10 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pr_idi.mydatabaseexample.BooksSortedByTitleFragment"
-    android:id="@+id/fragment_title">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.pr_idi.mydatabaseexample.FindBooksByAuthor">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
@@ -14,13 +13,12 @@
         <android.support.v7.widget.SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/search_bar_title_fragment"
+            android:id="@+id/search_bar_title_by_author"
             app:queryHint="Select autor" />
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/list_view_titles" />
+            android:id="@+id/list_view_titles_by_author" />
     </LinearLayout>
-
 
 </FrameLayout>
