--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Llibres per categoria" />
         <item
+            android:id="@+id/books_by_author"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Llibres per autor" />
+        <item
             android:id="@+id/new_book"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Afegir nou llibre" />
@@ -18,6 +22,10 @@
             android:id="@+id/delete_book"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Eliminar un llibre" />
+        <item
+            android:id="@+id/change_valoration_menu"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Canviar una valoració" />
         <item
             android:id="@+id/help_menu"
             android:icon="@drawable/ic_menu_slideshow"
