--- a/app/src/main/res/layout/book_item_layout_v2.xml
+++ b/app/src/main/res/layout/book_item_layout_v2.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -71,7 +72,6 @@
             <RatingBar
                 android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
-                android:isIndicator="true"
                 android:numStars="5"
                 android:layout_height="wrap_content"
                 style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
