--- a/app/src/main/res/layout/fragment_find_books_by_author.xml
+++ b/app/src/main/res/layout/fragment_find_books_by_author.xml
@@ -3,18 +3,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.pr_idi.mydatabaseexample.FindBooksByAuthor">
+    tools:context="com.example.pr_idi.mydatabaseexample.FindBooksByAuthorFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.SearchView
+
+        <TextView
+            android:text="Introdueixi el nom de l'autor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/search_bar_title_by_author"
-            app:queryHint="Select autor" />
+            android:paddingTop="10dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="10dp"
+            android:id="@+id/textViewAutor" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/editTextAutor"
+            android:inputType="text"
+            android:textSize="15sp" />
+
+        <Button
+            android:text="Cercar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonAutor" />
+
+        <TextView
+            android:text="No s'ha trobat l'autor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewAutorNotFound"
+            android:visibility="invisible"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_red_light"
+            android:textStyle="normal|bold" />
+
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
