--- a/app/src/main/res/layout/fragment_find_books_by_author.xml
+++ b/app/src/main/res/layout/fragment_find_books_by_author.xml
@@ -6,48 +6,60 @@
     tools:context="com.example.pr_idi.mydatabaseexample.FindBooksByAuthorFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:text="Introdueixi el nom de l'autor"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingLeft="5dp"
-            android:paddingBottom="10dp"
-            android:id="@+id/textViewAutor" />
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/editTextAutor"
-            android:inputType="text"
-            android:textSize="15sp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/editTextAutor"
+                android:inputType="text"
+                android:textSize="15sp"
+                android:hint="Introdueixi el nom de l'autor"
+                android:layout_weight="0.7"
+                />
 
-        <Button
-            android:text="Cercar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonAutor" />
+            <Button
+                android:text="Cercar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonAutor"
+                android:layout_weight="0.3"/>
 
-        <TextView
-            android:text="No s'ha trobat l'autor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewAutorNotFound"
-            android:visibility="invisible"
-            android:textAlignment="center"
-            android:textColor="@android:color/holo_red_light"
-            android:textStyle="normal|bold" />
+        </LinearLayout>
 
-        <ListView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/list_view_titles_by_author" />
+            android:orientation="vertical">
+            <TextView
+                android:text="No s'ha trobat l'autor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewAutorNotFound"
+                android:visibility="invisible"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_light"
+                android:textStyle="normal|bold" />
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/list_view_titles_by_author" />
+        </LinearLayout>
+
     </LinearLayout>
+
+
 
 </FrameLayout>
