--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon"/>
+        android:src="@drawable/book_image"/>
 
     <TextView
         android:layout_width="match_parent"
