--- a/app/src/main/res/layout/delete_book_dialog_layout.xml
+++ b/app/src/main/res/layout/delete_book_dialog_layout.xml
@@ -3,11 +3,21 @@
 
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
-    <include
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/book_item_layout_v2" />
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/book_item_layout_v2" />
+
+    </LinearLayout>
+
 
 </ScrollView>
