--- a/app/src/main/res/layout/fragment_change_valoration_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_valoration_dialog.xml
@@ -8,7 +8,8 @@
         tools:context="com.example.pr_idi.mydatabaseexample.ChangeValorationDialogFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
 
         <include
             android:layout_width="match_parent"
