--- a/app/src/main/res/layout/fragment_find_books_by_author.xml
+++ b/app/src/main/res/layout/fragment_find_books_by_author.xml
@@ -34,11 +34,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/buttonAutor"
-                android:layout_weight="0.3"/>
+                android:layout_weight="0.3"
+                />
 
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -47,19 +48,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewAutorNotFound"
+                android:layout_marginTop="20dp"
                 android:visibility="invisible"
                 android:textAlignment="center"
+                android:textSize="18sp"
                 android:textColor="@android:color/holo_red_light"
                 android:textStyle="normal|bold" />
 
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:listSelector="@android:color/transparent"
                 android:id="@+id/list_view_titles_by_author" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
-
 
 
 </FrameLayout>
