--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
+            android:id="@+id/appbar"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
