--- a/app/src/main/res/layout/fragment_change_valoration_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_valoration_dialog.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingBottom="20dp"
         android:layout_marginTop="15dp">
 
         <include
@@ -32,6 +33,7 @@
             android:stepSize="1"/>
 
         <TextView
+            android:text="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/stateRatingBar"
