--- a/app/src/main/res/layout/book_item_layout_v2.xml
+++ b/app/src/main/res/layout/book_item_layout_v2.xml
@@ -69,16 +69,6 @@
                 android:layout_above="@+id/textView4"
                 android:layout_toEndOf="@+id/book_image" />
 
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_width="wrap_content"
-                android:numStars="5"
-                android:layout_height="wrap_content"
-                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
-                android:layout_below="@+id/textView5"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="14dp" />
-
             <TextView
                 android:text="Any"
                 android:layout_width="wrap_content"
@@ -105,6 +95,22 @@
                 android:textSize="24sp"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/book_image" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/valoracio"
+                android:textStyle="normal|bold"
+                android:text="Valoració"
+                android:layout_below="@id/textView5"/>
+
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:numStars="5"
+                android:layout_height="wrap_content"
+                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
+                android:layout_below="@+id/textView5"
+                android:layout_alignStart="@+id/textView5" />
 
 
         </RelativeLayout>
